refactor(repository): improve query handling in `JdbcFilmRepository` and add `findFilmIdsByFilters` method
Signed-off-by: Sergei Kanchikov <kanchikov.sergey@gmail.com>